--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ crossorigin="anonymous">
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
         crossorigin="anonymous"></script> 
-<script src="data/tacticsbook.js"></script> 
+	<script src="data/book.js"></script>
+<!--<script src="data/tacticsbook.js"></script> -->
 <script src="js/tactics.js"></script> 
+
 <script>
 ;(function () {
   function isTouchDevice () {
