--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ crossorigin="anonymous">
                 </nav>
                 <h4>Page 132</h4>
             </div>
-            <div id="fakeBodyContainer" hidden>
+            <div id="fakeBodyContainer">
                 <div class="container-4e1ee">
                     <div id="board1" class="small-board"></div>
                     <div id="board2" class="small-board"> </div>
@@ -85,6 +85,7 @@ crossorigin="anonymous">
                         <div class="flip-card-back">
                             <div class="btn-group" role="group" style="margin-top:10px;">
                                 <button type="button" class="btn btn-outline-primary">Show answer</button>
+								<button type="button" class="btn btn-outline-primary">Flip board</button>
                             </div>
                             <div class="scrollable" style="visibility:visible;">
                                 <p class="tactic-answer">@fat
