--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
         crossorigin="anonymous"></script> 
-<!--<script src="js/chessboard-1.0.0.min.js"></script>--> 
-<script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
+<script src="js/chessboard-1.0.0.min.js"></script>
+<!--<script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
-        crossorigin="anonymous"></script> 
+        crossorigin="anonymous"></script> -->
 <script src="data/book.js"></script> 
 <!--<script src="data/tacticsbook.js"></script> --> 
 <script src="js/tactics.js"></script> 
@@ -37,7 +37,7 @@ crossorigin="anonymous">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
-<header style="background-color: #CC373A">
+<header style="background-color: #713134">
     <div class="body-width-115f6 flex-c31d5">
         <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
         <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" <a href="https://chessboardjs.com/download">Download</a> </div>
@@ -68,7 +68,7 @@ crossorigin="anonymous">
                 </nav>
                 <h4>Page 132</h4>
             </div>
-            <div id="fakeBodyContainer">
+            <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
                     <div id="board1" class="small-board"></div>
                     <div id="board2" class="small-board"> </div>
@@ -108,7 +108,7 @@ crossorigin="anonymous">
 <footer>
     <div class="body-width-115f6 flex-c31d5">
         <div class="left-3edd4">
-            <p>chessboard.js is released under the <a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE.md">MIT License</a></p>
+            <p>This project is released under the <a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE.md">MIT License</a></p>
             <p>the code can be found on <a href="https://github.com/oakmac/chessboardjs/">GitHub</a></p>
         </div>
         <div class="right-05ad3">
