--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
         crossorigin="anonymous"></script> 
-<script src="js/chessboard-1.0.0.min.js"></script>
+<script src="js/chessboard-1.0.0.min.js"></script> 
 <!--<script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script> --> 
 <script src="data/book.js"></script> 
 <!--<script src="data/tacticsbook.js"></script> --> 
 <script src="js/tactics.js"></script> 
@@ -66,7 +66,7 @@ crossorigin="anonymous">
                         <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
                     </ul>
                 </nav>
-                <h4>Page 132</h4>
+                <h4 hidden>Page 132</h4>
             </div>
             <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
@@ -116,6 +116,7 @@ crossorigin="anonymous">
         </div>
     </div>
 </footer>
+<HR color=#E1E1E1 SIZE=1>
 <div class="donation_block">
     <div id="smart-button-container" class="form-group">
         <div style="text-align: center" hidden>
