--- a/donation.html
+++ b/donation.html
@@ -21,8 +21,8 @@
         <div class="row">
             <div class="col-sm"> </div>
             <div class="col-sm">
-                <label for="amount"></label>
-                <input name="amountInput" type="number" id="amount" value="5" class="form-control">
+                <label for="amount"> </label>
+                <input name="amountInput" type="number" id="amount" value="" class="form-control">
             </div>
             <div class="col-sm dollar-sign">
                 <p>USD</p>
@@ -38,103 +38,103 @@
     </div>
     <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=USD" data-sdk-integration-source="button-factory"></script> 
     <script>
-	  function initPayPalButton() {
-		var description = document.querySelector('#smart-button-container #description');
-		var amount = document.querySelector('#smart-button-container #amount');
-		var descriptionError = document.querySelector('#smart-button-container #descriptionError');
-		var priceError = document.querySelector('#smart-button-container #priceLabelError');
-		var invoiceid = document.querySelector('#smart-button-container #invoiceid');
-		var invoiceidError = document.querySelector('#smart-button-container #invoiceidError');
-		var invoiceidDiv = document.querySelector('#smart-button-container #invoiceidDiv');
+  function initPayPalButton() {
+    var description = document.querySelector('#smart-button-container #description');
+    var amount = document.querySelector('#smart-button-container #amount');
+    var descriptionError = document.querySelector('#smart-button-container #descriptionError');
+    var priceError = document.querySelector('#smart-button-container #priceLabelError');
+    var invoiceid = document.querySelector('#smart-button-container #invoiceid');
+    var invoiceidError = document.querySelector('#smart-button-container #invoiceidError');
+    var invoiceidDiv = document.querySelector('#smart-button-container #invoiceidDiv');
 
-		var elArr = [description, amount];
+    var elArr = [description, amount];
 
-		if (invoiceidDiv.firstChild.innerHTML.length > 1) {
-		  invoiceidDiv.style.display = "block";
-		}
+    if (invoiceidDiv.firstChild.innerHTML.length > 1) {
+      invoiceidDiv.style.display = "block";
+    }
 
-		var purchase_units = [];
-		purchase_units[0] = {};
-		purchase_units[0].amount = {};
+    var purchase_units = [];
+    purchase_units[0] = {};
+    purchase_units[0].amount = {};
 
-		function validate(event) {
-		  return event.value.length > 0;
-		}
+    function validate(event) {
+      return event.value.length > 0;
+    }
 
-		paypal.Buttons({
-		  style: {
-			color: 'gold',
-			shape: 'rect',
-			label: 'paypal',
-			layout: 'vertical',
+    paypal.Buttons({
+      style: {
+        color: 'gold',
+        shape: 'rect',
+        label: 'paypal',
+        layout: 'vertical',
+        
+      },
 
-		  },
+      onInit: function (data, actions) {
+        actions.disable();
 
-		  onInit: function (data, actions) {
-			actions.disable();
+        if(invoiceidDiv.style.display === "block") {
+          elArr.push(invoiceid);
+        }
 
-			if(invoiceidDiv.style.display === "block") {
-			  elArr.push(invoiceid);
-			}
+        elArr.forEach(function (item) {
+          item.addEventListener('keyup', function (event) {
+            var result = elArr.every(validate);
+            if (result) {
+              actions.enable();
+            } else {
+              actions.disable();
+            }
+          });
+        });
+      },
 
-			elArr.forEach(function (item) {
-			  item.addEventListener('keyup', function (event) {
-				var result = elArr.every(validate);
-				if (result) {
-				  actions.enable();
-				} else {
-				  actions.disable();
-				}
-			  });
-			});
-		  },
+      onClick: function () {
+        if (description.value.length < 1) {
+          descriptionError.style.visibility = "visible";
+        } else {
+          descriptionError.style.visibility = "hidden";
+        }
 
-		  onClick: function () {
-			if (description.value.length < 1) {
-			  descriptionError.style.visibility = "visible";
-			} else {
-			  descriptionError.style.visibility = "hidden";
-			}
+        if (amount.value.length < 1) {
+          priceError.style.visibility = "visible";
+        } else {
+          priceError.style.visibility = "hidden";
+        }
 
-			if (amount.value.length < 1) {
-			  priceError.style.visibility = "visible";
-			} else {
-			  priceError.style.visibility = "hidden";
-			}
+        if (invoiceid.value.length < 1 && invoiceidDiv.style.display === "block") {
+          invoiceidError.style.visibility = "visible";
+        } else {
+          invoiceidError.style.visibility = "hidden";
+        }
 
-			if (invoiceid.value.length < 1 && invoiceidDiv.style.display === "block") {
-			  invoiceidError.style.visibility = "visible";
-			} else {
-			  invoiceidError.style.visibility = "hidden";
-			}
+        purchase_units[0].description = description.value;
+        purchase_units[0].amount.value = amount.value;
 
-			purchase_units[0].description = description.value;
-			purchase_units[0].amount.value = amount.value;
+        if(invoiceid.value !== '') {
+          purchase_units[0].invoice_id = invoiceid.value;
+        }
+      },
 
-			if(invoiceid.value !== '') {
-			  purchase_units[0].invoice_id = invoiceid.value;
-			}
-		  },
+      createOrder: function (data, actions) {
+        return actions.order.create({
+          purchase_units: purchase_units,
+        });
+      },
 
-		  createOrder: function (data, actions) {
-			return actions.order.create({
-			  purchase_units: purchase_units,
-			});
-		  },
+      onApprove: function (data, actions) {
+        return actions.order.capture().then(function (details) {
+          alert('Transaction completed by ' + details.payer.name.given_name + '!');
+        });
+      },
 
-		  onApprove: function (data, actions) {
-			return actions.order.capture().then(function (details) {
-			  alert('Transaction completed by ' + details.payer.name.given_name + '!');
-			});
-		  },
-
-		  onError: function (err) {
-			console.log(err);
-		  }
-		}).render('#paypal-button-container');
-	  }
-	  initPayPalButton();
-	  </script> 
+      onError: function (err) {
+        console.log(err);
+      }
+    }).render('#paypal-button-container');
+  }
+  initPayPalButton();
+  </script> 
 </div>
 </body>
 </html>
