change solution code

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ crossorigin="anonymous">
 <body data-new-gr-c-s-check-loaded="14.993.0" data-gr-ext-installed="">
 <header style="background-color: #713134">
     <div class="body-width-115f6 flex-c31d5">
-        <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2001<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
+        <div class="left-3edd4"> <a class="homepage-link-98a24" href="https://chessboardjs.com/index.html">Tactics 2021<span class="tld-bd9e6"> Made by Yizhou Zhao, 2021</span></a> </div>
         <div class="right-05ad3"> <a href="https://chessboardjs.com/index.html">Home</a> <a class="active" <a href="https://chessboardjs.com/download">Download</a> </div>
     </div>
 </header>
@@ -88,7 +88,7 @@ crossorigin="anonymous">
                             </div>
                             <div class="scrollable" style="visibility:visible;">
                                 <p class="tactic-answer">@fat
-                                    Ad leggings keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
+                                    Ad 	&#9812; &#9823; leggings &#9822; keytar, brunch id art party dolor labore. Pitchfork yr enim lo-fi before they sold out qui. Tumblr farm-to-table bicycle rights whatever. Anim keffiyeh carles cardigan. Velit seitan mcsweeney's photo booth 3 wolf moon irure. Cosby sweater lomo jean shorts, williamsburg hoodie minim qui you probably haven't heard of them et cardigan trust fund culpa biodiesel wes anderson aesthetic. Nihil tattooed accusamus, cred irony biodiesel keffiyeh artisan ullamco consequat.</p>
                             </div>
                             <div style="display: inline;"> <span>Copy: </span>
                                 <div class="btn-group" role="group" aria-label="Basic outlined example">
