--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" href="https://chessboardjs.com/img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" href="css/css">
 <link rel="stylesheet" href="css/website2.css">
 <link rel="stylesheet"
 href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
@@ -59,6 +58,20 @@ crossorigin="anonymous">
         </nav>
         <div class="examples-body-9af4d" id="exampleBodyContainer">
             <div class="example-block-head d-flex justify-content-between">
+				<div class="content_detail__pagination cdp" actpage="1">
+			<a href="#!-1" class="cdp_i">prev</a>
+			<a href="#!1" class="cdp_i">1</a>
+			<a href="#!2" class="cdp_i">2</a>
+			<a href="#!3" class="cdp_i">3</a>
+			<a href="#!4" class="cdp_i">4</a>
+			<a href="#!5" class="cdp_i">5</a>
+			<a href="#!6" class="cdp_i">6</a>
+			<a href="#!7" class="cdp_i">7</a>
+			<a href="#!8" class="cdp_i">8</a>
+			<a href="#!9" class="cdp_i">9</a>
+			<a href="#!10" class="cdp_i">10</a>
+			<a href="#!+1" class="cdp_i">next</a>
+		</div>
                 <nav aria-label="Page navigation example">
                     <ul class="pagination">
                         <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
