--- a/index.html
+++ b/index.html
@@ -58,28 +58,13 @@ crossorigin="anonymous">
         </nav>
         <div class="examples-body-9af4d" id="exampleBodyContainer">
             <div class="example-block-head d-flex justify-content-between">
-				<div class="content_detail__pagination cdp" actpage="1">
-			<a href="#!-1" class="cdp_i">prev</a>
-			<a href="#!1" class="cdp_i">1</a>
-			<a href="#!2" class="cdp_i">2</a>
-			<a href="#!3" class="cdp_i">3</a>
-			<a href="#!4" class="cdp_i">4</a>
-			<a href="#!5" class="cdp_i">5</a>
-			<a href="#!6" class="cdp_i">6</a>
-			<a href="#!7" class="cdp_i">7</a>
-			<a href="#!8" class="cdp_i">8</a>
-			<a href="#!9" class="cdp_i">9</a>
-			<a href="#!10" class="cdp_i">10</a>
-			<a href="#!+1" class="cdp_i">next</a>
-		</div>
                 <nav aria-label="Page navigation example">
-                    <ul class="pagination">
+                    <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
+                    <ul class="pagination" id="pageUl">
                         <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-                        <li class="page-item"><a class="page-link" id="pageId" href="#">1</a></li>
                         <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
                     </ul>
                 </nav>
-                <h4 hidden>Page 132</h4>
             </div>
             <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
