--- a/pagination.html
+++ b/pagination.html
@@ -4,11 +4,23 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 <link rel="stylesheet" href="css/website2.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+        crossorigin="anonymous"></script> 
+<script src="js/paginationa.js"></script> 
+<script>
+$( document ).ready(hello_world);
+</script>
 </head>
-<ul class="pagination">
-	<li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-	<li class="page-item"><a class="page-link" id="pageId" href="#">1</a></li>
-	<li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
+<ul class="pagination" id="pageUl">
+    <li class="page-item" id="previousPageLi"><a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+<!--	<li class="page-item"><a class="page-link" href="#">4</a></li>
+    <li class="page-item"><a class="page-link" href="#">5</a></li>
+    <li class="page-item"><a class="page-link" href="#">6</a></li>
+	<li class="page-item"><a class="page-link" href="#">7</a></li>
+    <li class="page-item"><a class="page-link" href="#">8</a></li>-->
+    <li class="page-item" id="nextPageLi"><a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
 </ul>
 <body>
 </body>
