--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@ crossorigin="anonymous">
 <main>
     <div class="body-width-115f6 flex-c31d5 examples-c30bc">
         <nav class="example-nav-0e953" id="examplesNav">
-            <h4 id="groupHeader-1" class="active">Tactics</h4>
+            <h4 id="groupHeader-1" class="active">Books</h4>
             <ul id="groupContainer-1" style="">
-                <li id="exampleLink-1000" class="">By piece</li>
-                <li id="exampleLink-1001" class="">By strategy</li>
+                <li id="exampleLink-1000" class="" data-id="0">Tactics 2001</li>
+                <li id="exampleLink-1001" class="" data-id="1">By strategy</li>
             </ul>
-            <h4 id="groupHeader-5">Instruction</h4>
+            <h4 id="groupHeader-5" >Instruction</h4>
             <ul id="groupContainer-5" style="display:none">
                 <li id="exampleLink-5000">Only Allow Legal Moves</li>
                 <li id="exampleLink-5001">Play Random Computer</li>
             </ul>
         </nav>
-        <div class="examples-body-9af4d" id="exampleBodyContainer">
+        <div class="examples-body-9af4d" id="exampleBodyContainer" data-id="0">
             <div class="example-block-head d-flex justify-content-between">
                 <nav aria-label="Page navigation example">
                     <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
                     <ul class="pagination" id="pageUl">
                         <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&raquo;</span> <span class="sr-only">Next</span> </a> </li>
+                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&nbsp;</span> <span class="sr-only">Next</span> </a> </li>
                     </ul>
                 </nav>
             </div>
@@ -101,6 +101,7 @@ crossorigin="anonymous">
             </div>
             <div id="realBodyContainer"> </div>
         </div>
+		<div class="examples-body-9af4d" data-id="1"></div>
     </div>
 </main>
 <footer>
@@ -114,7 +115,7 @@ crossorigin="anonymous">
         </div>
     </div>
 </footer>
-<HR color=#E1E1E1 SIZE=1>
+<hr color="#E1E1E1" SIZE="1">
 <div class="donation_block">
     <div id="smart-button-container" class="form-group">
         <div style="text-align: center" hidden>
