--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Tactics 2001</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="https://chessboardjs.com/img/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="css/website2.css">
@@ -58,13 +59,23 @@ crossorigin="anonymous">
         </nav>
         <div class="examples-body-9af4d" id="exampleBodyContainer" data-id="0">
             <div class="example-block-head d-flex justify-content-between">
-                <nav aria-label="Page navigation example">
-                    <div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
-                    <ul class="pagination" id="pageUl">
-                        <li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
-                        <li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&nbsp;</span> <span class="sr-only">Next</span> </a> </li>
-                    </ul>
-                </nav>
+				<div>
+					<nav aria-label="Page navigation example">
+						<div class="page-item" hidden><a class="page-link" id="pageId" href="#">1</a></div>
+						<ul class="pagination" id="pageUl">
+							<li class="page-item" id="previousPageLi"> <a class="page-link" href="#" aria-label="Previous" onClick="change_page(false)" id=""> <span aria-hidden="true">&laquo;</span> <span class="sr-only">Previous</span> </a> </li>
+							<li class="page-item" id="nextPageLi"> <a class="page-link" href="#" aria-label="Next" onClick="change_page(true)"> <span aria-hidden="true">&nbsp;</span> <span class="sr-only">Next</span> </a> </li>
+						</ul>
+					</nav>
+				</div>
+				<div>
+					<nav class="navbar navbar-light">
+					  <form class="form-inline">
+						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+						<button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
+					  </form>
+					</nav>
+				</div>
             </div>
             <div id="fakeBodyContainer" hidden>
                 <div class="container-4e1ee">
@@ -101,7 +112,9 @@ crossorigin="anonymous">
             </div>
             <div id="realBodyContainer"> </div>
         </div>
-		<div class="examples-body-9af4d" data-id="1"></div>
+		<div class="examples-body-9af4d" data-id="1" style="display:none">
+			<h4>心有所住</h4>
+		</div>
     </div>
 </main>
 <footer>
